--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
 </head>
 <body class="body">
   <div class="page">
-
     <header class="header">
       <img class="header__logo" src="images/russian-travel-logo.svg" alt="Логотип Путшествия по России">
-      <nav class="header__language">
-      <span class="link link_place_header link_underline_off">Ru</span>
-      <a class="link link_place_header" href="#">En</a>
-      </nav>
+      <div class="header__language">
+        <a class="link link_place_header link_hover_light link_place_header_active" href="#">Ru</a>
+        <a class="link link_place_header link_hover_light" href="#">En</a>
+      </div>
     </header>
 
     <main class="content">
-
       <section class="lead">
-        <h1 class="headline headline_place_lead">Путешествия по России</h1>
+        <h1 class="headline headline_place_lead">Путешествия по&nbsp;России</h1>
         <p class="lead__description">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__picture-place">
           <img class="lead__picture" src="images/hero-main-pic.jpg" alt="Карта маршрута Путешествия">
@@ -43,28 +41,27 @@
       </article>
 
       <section class="photo-grid" aria-label="Фотогалерея">
-        <img class="photo-grid__image" src="images/gallery/img-1.jpg" alt="Картинка">
-        <img class="photo-grid__image" src="images/gallery/img-2.jpg" alt="Картинка">
-        <img class="photo-grid__image" src="images/gallery/img-3.jpg" alt="Картинка">
-        <img class="photo-grid__image" src="images/gallery/img-4.jpg" alt="Картинка">
-        <img class="photo-grid__image" src="images/gallery/img-5.jpg" alt="Картинка">
-        <img class="photo-grid__image" src="images/gallery/img-6.jpg" alt="Картинка">
-        <img class="photo-grid__image" src="images/gallery/img-7.jpg" alt="Картинка">
-        <img class="photo-grid__image" src="images/gallery/img-8.jpg" alt="Картинка">
-        <img class="photo-grid__image" src="images/gallery/img-9.jpg" alt="Картинка">
-        <img class="photo-grid__image" src="images/gallery/img-10.jpg" alt="Картинка">
-        <img class="photo-grid__image" src="images/gallery/img-11.jpg" alt="Картинка">
-        <img class="photo-grid__image" src="images/gallery/img-12.jpg" alt="Картинка">
+        <img class="photo-grid__image" src="images/gallery/img-1.jpg" alt="Вид из окна поезда">
+        <img class="photo-grid__image" src="images/gallery/img-2.jpg" alt="Облака над горами">
+        <img class="photo-grid__image" src="images/gallery/img-3.jpg" alt="Собака на стоге сена">
+        <img class="photo-grid__image" src="images/gallery/img-4.jpg" alt="Хвойный лес в тумане">
+        <img class="photo-grid__image" src="images/gallery/img-5.jpg" alt="Машина на льду озера Байкал">
+        <img class="photo-grid__image" src="images/gallery/img-6.jpg" alt="Берег моря">
+        <img class="photo-grid__image" src="images/gallery/img-7.jpg" alt="Заснеженные пики гор">
+        <img class="photo-grid__image" src="images/gallery/img-8.jpg" alt="Знак пешеходного перехода">
+        <img class="photo-grid__image" src="images/gallery/img-9.jpg" alt="Каньон вид сверху">
+        <img class="photo-grid__image" src="images/gallery/img-10.jpg" alt="Степь на фоне горы">
+        <img class="photo-grid__image" src="images/gallery/img-11.jpg" alt="Крутой каменный обрыв к морю">
+        <img class="photo-grid__image" src="images/gallery/img-12.jpg" alt="Горы в густых облаках">
       </section>
 
       <section class="places">
         <ul class="places__list">
-
           <li class="places__place">
             <h3 class="headline headline_place_places">Куршская коса</h3>
             <div class="places__url">
-              <p class="places__link-type">URL</p>
-              <a class="link link_place_places link_hover_light" href="http://park-kosa.ru">park-kosa.ru</a>
+              <p class="places__link-type">url</p>
+              <a class="link link_place_places link_hover_light" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
             </div>
             <img class="places__image" src="images/places/place-1.jpg" alt="Куршская коса">
             <div class="places__texts">
@@ -72,12 +69,11 @@
               <p class="places__text">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
             </div>
           </li>
-
           <li class="places__place">
             <h3 class="headline headline_place_places">Кольский</h3>
             <div class="places__url">
-              <p class="places__link-type">URL</p>
-              <a class="link link_place_places link_hover_light" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+              <p class="places__link-type">url</p>
+              <a class="link link_place_places link_hover_light" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
             </div>
             <img class="places__image" src="images/places/place-2.jpg" alt="Кольский">
             <div class="places__texts">
@@ -85,12 +81,11 @@
               <p class="places__text">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
             </div>
           </li>
-
           <li class="places__place">
             <h3 class="headline headline_place_places">Алтай</h3>
             <div class="places__url">
-              <p class="places__link-type">URL</p>
-              <a class="link link_place_places link_hover_light" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+              <p class="places__link-type">url</p>
+              <a class="link link_place_places link_hover_light" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
             </div>
             <img class="places__image" src="images/places/place-3.jpg" alt="Кольский">
             <div class="places__texts">
@@ -98,12 +93,11 @@
               <p class="places__text">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
             </div>
           </li>
-
           <li class="places__place">
             <h3 class="headline headline_place_places">Зимний Байкал</h3>
             <div class="places__url">
-              <p class="places__link-type">URL</p>
-              <a class="link link_place_places link_hover_light" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+              <p class="places__link-type">url</p>
+              <a class="link link_place_places link_hover_light" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
             </div>
             <img class="places__image" src="images/places/place-4.jpg" alt="Кольский">
             <div class="places__texts">
@@ -111,42 +105,47 @@
               <p class="places__text">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
             </div>
           </li>
-
           <li class="places__place">
             <h3 class="headline headline_place_places">Карелия</h3>
             <div class="places__url">
-              <p class="places__link-type">URL</p>
-              <a class="link link_place_places link_hover_light" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+              <p class="places__link-type">url</p>
+              <a class="link link_place_places link_hover_light" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
             </div>
             <img class="places__image" src="images/places/place-5.jpg" alt="Кольский">
             <div class="places__texts">
               <p class="places__text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
           </li>
-
         </ul>
       </section>
 
       <section class="cover">
-        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-        <div class="cover__text">
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
           <h3 class="headline headline_place_cover">До Байкала «на&nbsp;собаках»</h3>
           <p class="cover__description">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-        </div>
-        <div class="cover__overlay"></div>
-        <img class="cover__image" src="images/banner.jpg" alt="До Байкала «на собаках»">
         </a>
       </section>
-
     </main>
 
     <footer class="footer">
       <nav class="footer__links">
-        <a class="link link_place_footer link_underline_off link_hover_light" href="https://yandex.ru/maps">Карта</a>
-        <a class="link link_place_footer link_underline_off link_hover_light" href="https://yandex.ru/pogoda">Погода</a>
-        <a class="link link_place_footer link_underline_off link_hover_light" href="https://rasp.yandex.ru">Расписание</a>
-        <a class="link link_place_footer link_underline_off link_hover_light" href="https://calendar.yandex.ru">Календарь</a>
-        <a class="link link_place_footer link_underline_off link_hover_light" href="https://travel.yandex.ru">Путешествие</a>
+        <ul class="footer__navigations">
+          <li class="footer__link">
+            <a class="link link_place_footer link_hover_light" href="https://yandex.ru/maps" target="_blank">Карты</a>
+          </li>
+          <li class="footer__link">
+            <a class="link link_place_footer link_hover_light" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+          </li>
+          <li class="footer__link">
+            <a class="link link_place_footer link_hover_light" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+          </li>
+          <li class="footer__link">
+            <a class="link link_place_footer link_hover_light" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+          </li>
+          <li class="footer__link">
+            <a class="link link_place_footer link_hover_light" href="https://travel.yandex.ru" target="_blank">Путешествие</a>
+          </li>
+        </ul>
       </nav>
       <p class="footer__copyright">© 2023. Константин Васильев</p>
     </footer>
