Правки после авто тестов

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <img class="header__logo" src="images/russian-travel-logo.svg" alt="Логотип Путшествия по России">
       <div class="header__language">
-        <a class="link link_place_header link_hover_light link_place_header_active" href="#">Ru</a>
+        <a class="link link_place_header link_hover_light link__active" href="#">Ru</a>
         <a class="link link_place_header link_hover_light" href="#">En</a>
       </div>
     </header>
