внесение правко после ревью

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </section>
 
       <article class="intro">
-        <h2 class="headline headline_place_intro">Чего мы там&nbsp;не видели?</h2>
+        <h2 class="headline headline_place_intro">Чего мы&nbsp;там не&nbsp;видели?</h2>
         <p class="intro__text">
           По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
         </p>
@@ -39,7 +39,7 @@
           <li>Аэропортов <span class="intro__normal-text">241</span></li>
         </ul>
       </article>
-
+ 
       <section class="photo-grid" aria-label="Фотогалерея">
         <img class="photo-grid__image" src="images/gallery/img-1.jpg" alt="Вид из окна поезда">
         <img class="photo-grid__image" src="images/gallery/img-2.jpg" alt="Облака над горами">
@@ -54,7 +54,7 @@
         <img class="photo-grid__image" src="images/gallery/img-11.jpg" alt="Крутой каменный обрыв к морю">
         <img class="photo-grid__image" src="images/gallery/img-12.jpg" alt="Горы в густых облаках">
       </section>
-
+      
       <section class="places">
         <ul class="places__list">
           <li class="places__place">
@@ -127,7 +127,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+  <footer class="footer">
       <nav class="footer__links">
         <ul class="footer__navigations">
           <li class="footer__link">
